--- a/src/app/club/register/register.component.css
+++ b/src/app/club/register/register.component.css
@@ -1,9 +1,9 @@
 .btn-secondary{
-    background-color:#ffb700
+    background-color:#77bbfd
 }
 
 .dropdown-toggle{
-    background-color:#ffb700
+    background-color:#77bbfd
 }
 
 .card-registration{
@@ -35,7 +35,7 @@ background-color: rgba(0, 0, 0, 0.7);
 }
 
 .bg-indigo {
-background-color: #ffb700;
+background-color: #77bbfd;
 float: right;
 
 }
