--- a/src/app/club/pages-statics/qsomos/qsomos.component.html
+++ b/src/app/club/pages-statics/qsomos/qsomos.component.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="col">
 				<div class="ratio ratio-16x9">
-          <iframe src="https://youtu.be/KAyziOznH90" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KAyziOznH90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</div>
       </div>
