cambios en emision individual

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -214,8 +214,8 @@
   </section>
 <br>
 
-<footer class="footer" style="background-image:url(./assets/imagenes/arys/planes.jpg)">
-  <div><h3 style="color:white">Mundial Autos</h3> </div>
+<footer class="footer" style="background-image:url(./assets/imagenes/arys/planes.jpg);background-position: center;">
+  <div><h3 >Mundial Autos</h3> </div>
   
   <div class="container">       
     <div class="row">
