--- a/src/app/club/pages-statics/contact/contact.component.html
+++ b/src/app/club/pages-statics/contact/contact.component.html
@@ -40,22 +40,23 @@
             <div class="info-item  d-flex flex-column justify-content-center align-items-center" data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation-show-on-load="false">
               <i class="bi bi-map"></i>
               <h3>Nuestra Dirección</h3>
-              <p>Av.Bolivar norte <br>
-                Centro comercial y profesional El Camoruco<br>Piso 9, oficina 01<br> Edo.Valencia</p>
+              Av. Francisco de Miranda, <br>
+              Edif. Cavendes, Piso 11 OF 1101
+Urb. Los Palos Grandes,<br>1060 Chacao,<br>Caracas.<br>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope"></i>
               <h3>Nuestro Correo</h3>
-              <p><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@arysauto.com">siniestros@arysauto.com</a></p>
+              <p><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=info@lamundialdeseguros.com">info@lamundialdeseguros.com</a></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
               <h3>Llamanos</h3>
-              <p><a href="tel:04144128237">+584144128237</a></p>
+              <p><a href="tel:02122839619">+582122839619</a></p>
             </div>
           </div>
         </div>
@@ -114,7 +115,7 @@ Urb. Los Palos Grandes,<br>1060 Chacao,<br>Caracas.<br>
             <ul>
               <li><a href="inicio">Inicio</a></li>
               <li><a href="qsomos">Quienes Somos</a></li>
-    <!---->             </ul>
+          </ul>
           </div>
         </div>
       </div>
