--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -185,9 +185,9 @@
                           <option></option>
                           <option *ngFor="let plan of planList" value="{{ plan.id }}">{{ plan.value }}</option>
                         </select>                       
-                       <div *ngIf="submitted && search_form.get('cplan').errors"  class="invalid-feedback">
+                       <!-- <div *ngIf="submitted && search_form.get('cplan').errors"  class="invalid-feedback">
                           <div *ngIf="search_form.get('cplan').errors.required">Se requiere completar el campo</div>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
 
@@ -201,9 +201,9 @@
                             <option></option>
                             <option *ngFor="let tipo of tipoList" value="{{ tipo.value }}">{{ tipo.value }}</option>
                           </select>                       
-                           <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
+                           <!-- <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
                             <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                       
@@ -296,9 +296,9 @@
                           <select formControlName="xuso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xuso').errors } " (change)="getTipo()">
                             <option *ngFor="let uso of usoList" value="{{ uso.value }}">{{ uso.value }}</option>
                           </select>                       
-                           <div *ngIf="submitted && search_form.get('xuso').errors"  class="invalid-feedback">
-                            <div *ngIf="search_form.get('xuso').errors.required">Se requiere completar el campo</div>
-                          </div>
+                           <!-- <div *ngIf="submitted && search_form.get('xuso').errors"  class="invalid-feedback">
+                            <div *ngIf="search_form.get('xuso').errors.required">Se requiere completar el campo</div> 
+                          </div>-->
                         </div>
                       </div>
                     </div>
